--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "serve": "^14.1.2",
     "web-vitals": "^2.1.4"
   },
